--- a/Fetch/exercice-2/index.html
+++ b/Fetch/exercice-2/index.html
@@ -2,10 +2,11 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>Exercice 1 Fetch</title>
+        <title>Exercice 2 Fetch</title>
     </head>
     <body>
 
     <script type="application/javascript" src="index.js"></script>
     </body>
 </html>
+Soft-wrap
